objects/Company_Setting__mdt/Company_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Company Setting</label>
    <pluralLabel>Company Settings</pluralLabel>
</CustomObject>