objects/Company_Setting__mdt/fields/API2PDF_Key__c.field-meta.xml
<CustomField>
    <fullName>API2PDF_Key__c</fullName>
    <label>API2PDF Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>