objects/Company_Setting__mdt/fields/Default_Resource_Type_for_FA__c.field-meta.xml
<CustomField>
    <fullName>Default_Resource_Type_for_FA__c</fullName>
    <label>Default Resource Type for FA</label>
    <length>30</length>
    <type>Text</type>
</CustomField>