objects/Company_Setting__mdt/fields/Default_Retainage_Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Retainage_Resource_Id__c</fullName>
    <label>Default Retainage Resource Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>