objects/Company_Setting__mdt/fields/Fixed_Price_Job_Resource__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price_Job_Resource__c</fullName>
    <label>Fixed Price Job Resource</label>
    <length>20</length>
    <type>Text</type>
</CustomField>