objects/Company_Setting__mdt/fields/Mobile_TM_Version_No__c.field-meta.xml
<CustomField>
    <fullName>Mobile_TM_Version_No__c</fullName>
    <label>Mobile T&amp;M Version No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>