objects/Company_Setting__mdt/fields/Payroll_Blockout_Start_Minute__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Blockout_Start_Minute__c</fullName>
    <label>Payroll Blockout Start Minute</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>