objects/Company_Setting__mdt/fields/Quote_Signature_Token_Expiration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Quote_Signature_Token_Expiration_Hours__c</fullName>
    <label>Quote Signature Token Expiration Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>