objects/Company_Setting__mdt/fields/Retainage_Receivable_GL_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Retainage_Receivable_GL_Account_Id__c</fullName>
    <label>Retainage Receivable GL Account Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>