objects/Company_Setting__mdt/fields/Rinse_Out_Fee_Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>Rinse_Out_Fee_Resource_Id__c</fullName>
    <label>Rinse Out Fee Resource Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>