objects/Company_Setting__mdt/fields/Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sandbox</label>
    <type>Checkbox</type>
</CustomField>