objects/Company_Setting__mdt/fields/Sandbox_Email_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Email_Recipients__c</fullName>
    <label>Sandbox Email Recipients</label>
    <length>255</length>
    <type>Text</type>
</CustomField>