objects/Company_Setting__mdt/fields/Signature_Request_Reminding_Days__c.field-meta.xml
<CustomField>
    <fullName>Signature_Request_Reminding_Days__c</fullName>
    <label>Signature Request Reminder (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>