objects/Company_Setting__mdt/fields/TM_Signature_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>TM_Signature_Site_URL__c</fullName>
    <label>T&amp;M Signature Site URL</label>
    <length>250</length>
    <type>Text</type>
</CustomField>