objects/Company_Setting__mdt/fields/TM_Signature_Token_Expiration_Hours__c.field-meta.xml
<CustomField>
    <fullName>TM_Signature_Token_Expiration_Hours__c</fullName>
    <label>T&amp;M Signature Token Expiration Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>