objects/Company_Setting__mdt/fields/X2023_Billing_Rule_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>X2023_Billing_Rule_Start_Date__c</fullName>
    <label>2023_Billing_Rule_Start_Date</label>
    <type>Date</type>
</CustomField>